[gd_scene load_steps=28 format=3 uid="uid://cmain001"]

[ext_resource type="PackedScene" uid="uid://cplayer001" path="res://scenes/player/player.tscn" id="1_player"]
[ext_resource type="Script" uid="uid://b31v4qvy3h8ht" path="res://scripts/systems/post_processing.gd" id="2_postproc"]
[ext_resource type="Shader" uid="uid://byfulahcecwqg" path="res://shaders/motion_blur.gdshader" id="3_mblur"]
[ext_resource type="Shader" uid="uid://didkjcit6wwby" path="res://shaders/chromatic_aberration.gdshader" id="4_ca"]
[ext_resource type="PackedScene" uid="uid://cdebug001" path="res://scenes/ui/debug_overlay.tscn" id="5_debug"]
[ext_resource type="Script" uid="uid://c8a4wbah15024" path="res://scripts/systems/demo_loop_controller.gd" id="6_demoloop"]
[ext_resource type="PackedScene" path="res://scenes/ui/demo_hud.tscn" id="7_demohud"]
[ext_resource type="PackedScene" path="res://scenes/ui/demo_results_screen.tscn" id="8_demoresults"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_001"]
sky_top_color = Color(0.35, 0.55, 0.85, 1)
sky_horizon_color = Color(0.65, 0.75, 0.85, 1)
ground_bottom_color = Color(0.2, 0.17, 0.13, 1)
ground_horizon_color = Color(0.55, 0.55, 0.5, 1)

[sub_resource type="Sky" id="Sky_001"]
sky_material = SubResource("ProceduralSkyMaterial_001")

[sub_resource type="Environment" id="Environment_001"]
background_mode = 2
sky = SubResource("Sky_001")
ambient_light_source = 2
ambient_light_color = Color(0.4, 0.4, 0.45, 1)
ambient_light_energy = 0.3
tonemap_mode = 2
ssao_enabled = true

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_001"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mblur"]
shader = ExtResource("3_mblur")
shader_parameter/blur_strength = 0.0
shader_parameter/blur_direction = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ca"]
shader = ExtResource("4_ca")
shader_parameter/intensity = 0.005

[sub_resource type="FastNoiseLite" id="FastNoiseLite_floor"]
noise_type = 0
frequency = 0.05
fractal_octaves = 3

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_floor"]
noise = SubResource("FastNoiseLite_floor")

[sub_resource type="StandardMaterial3D" id="Material_floor"]
albedo_color = Color(0.45, 0.42, 0.38, 1)
albedo_texture = SubResource("NoiseTexture2D_floor")
uv1_scale = Vector3(4, 4, 4)

[sub_resource type="StandardMaterial3D" id="Material_ceiling"]
albedo_color = Color(0.75, 0.73, 0.7, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_wall"]
noise_type = 3
frequency = 0.02
fractal_octaves = 4

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_wall"]
noise = SubResource("FastNoiseLite_wall")

[sub_resource type="StandardMaterial3D" id="Material_wall"]
albedo_color = Color(0.65, 0.6, 0.55, 1)
albedo_texture = SubResource("NoiseTexture2D_wall")
uv1_scale = Vector3(2, 2, 2)

[sub_resource type="StandardMaterial3D" id="Material_crate"]
albedo_color = Color(0.55, 0.4, 0.25, 1)

[sub_resource type="StandardMaterial3D" id="Material_barrel"]
albedo_color = Color(0.3, 0.35, 0.4, 1)
metallic = 0.4

[sub_resource type="FastNoiseLite" id="FastNoiseLite_ground"]
noise_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ground"]
width = 1024
height = 1024
noise = SubResource("FastNoiseLite_ground")

[sub_resource type="StandardMaterial3D" id="Material_ground"]
albedo_color = Color(0.35, 0.45, 0.25, 1)
albedo_texture = SubResource("NoiseTexture2D_ground")
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="StandardMaterial3D" id="Material_structure"]
albedo_color = Color(0.5, 0.48, 0.45, 1)

[node name="Main" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_001")
camera_attributes = SubResource("CameraAttributesPractical_001")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.354, 0.354, 0, 0.707, 0.707, -0.5, -0.612, 0.612, 0, 20, 0)
light_color = Color(1, 0.95, 0.85, 1)
light_energy = 1.2
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0.1, 2)

[node name="PostProcessing" type="CanvasLayer" parent="."]
layer = 10
script = ExtResource("2_postproc")

[node name="MotionBlurRect" type="ColorRect" parent="PostProcessing"]
visible = false
material = SubResource("ShaderMaterial_mblur")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ChromaticAberrationRect" type="ColorRect" parent="PostProcessing"]
visible = false
material = SubResource("ShaderMaterial_ca")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="IndoorSection" type="Node3D" parent="."]

[node name="Corridor1_Floor" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, -5)
use_collision = true
size = Vector3(4, 0.2, 14)
material = SubResource("Material_floor")

[node name="Corridor1_Ceiling" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 3, -5)
use_collision = true
size = Vector3(4, 0.2, 14)
material = SubResource("Material_ceiling")

[node name="Corridor1_WallLeft" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, -5)
use_collision = true
size = Vector3(0.3, 3, 14)
material = SubResource("Material_wall")

[node name="Corridor1_WallRight" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1.5, -5)
use_collision = true
size = Vector3(0.3, 3, 14)
material = SubResource("Material_wall")

[node name="Corridor1_Light1" type="OmniLight3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2.7, -2)
light_color = Color(1, 0.93, 0.8, 1)
light_energy = 2.0
shadow_enabled = true
omni_range = 6.0

[node name="Corridor1_Light2" type="OmniLight3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 2.7, -8)
light_color = Color(1, 0.93, 0.8, 1)
light_energy = 2.0
shadow_enabled = true
omni_range = 6.0

[node name="Junction_Floor" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.873047, 0, -12)
use_collision = true
size = Vector3(10.253906, 0.2, 6)
material = SubResource("Material_floor")

[node name="Junction_Ceiling" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.005725, 3.010019, -13.428384)
use_collision = true
size = Vector3(9.996094, 0.2, 3.1420898)
material = SubResource("Material_ceiling")

[node name="Junction_Ceiling" type="CSGBox3D" parent="IndoorSection/Junction_Ceiling"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.9959059, 0.0014998913, 2.754364)
use_collision = true
size = Vector3(6.014221, 0.2, 3.0826416)
material = SubResource("Material_ceiling")

[node name="Junction_WallBack" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1.5, -15)
use_collision = true
size = Vector3(8, 3, 0.3)
material = SubResource("Material_wall")

[node name="Junction_WallFront_Left" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(0.8110434, 0, -0.584986, 0, 1, 0, 0.584986, 0, 0.8110434, 1.047576, 1.5, -13.506488)
use_collision = true
size = Vector3(0.3, 3, 3.9033203)
material = SubResource("Material_wall")

[node name="Junction_WallRight_Top" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1.5, -14.5)
use_collision = true
size = Vector3(0.3, 3, 1)
material = SubResource("Material_wall")

[node name="Junction_WallRight_Bottom" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 1.5, -9.639171)
use_collision = true
size = Vector3(0.3, 3, 1)
material = SubResource("Material_wall")

[node name="Junction_Light" type="OmniLight3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 2.7, -12)
light_color = Color(1, 0.93, 0.8, 1)
light_energy = 3.0
shadow_enabled = true
omni_range = 8.0

[node name="Corridor2_Floor" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 0, -12)
use_collision = true
size = Vector3(8, 0.2, 4)
material = SubResource("Material_floor")

[node name="Corridor2_Ceiling" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 3, -12)
use_collision = true
size = Vector3(8, 0.2, 4)
material = SubResource("Material_wall")

[node name="Corridor2_WallTop" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 1.5, -14)
use_collision = true
size = Vector3(8, 3, 0.3)
material = SubResource("Material_wall")

[node name="Corridor2_WallBottom" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 1.5, -10)
use_collision = true
size = Vector3(8, 3, 0.3)
material = SubResource("Material_wall")

[node name="Corridor2_Light" type="OmniLight3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14, 2.7, -12)
light_color = Color(1, 0.93, 0.8, 1)
light_energy = 2.0
shadow_enabled = true
omni_range = 6.0

[node name="Crate2" type="CSGBox3D" parent="IndoorSection"]
transform = Transform3D(0.924, 0, 0.383, 0, 1, 0, -0.383, 0, 0.924, 4.5, 0.35, -11)
use_collision = true
size = Vector3(0.7, 0.7, 0.7)
material = SubResource("Material_crate")

[node name="Barrel1" type="CSGCylinder3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0.6, -13.5)
use_collision = true
radius = 0.4
height = 1.2
sides = 12
material = SubResource("Material_barrel")

[node name="Barrel2" type="CSGCylinder3D" parent="IndoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.9, 0.6, -13.2)
use_collision = true
radius = 0.4
height = 1.2
sides = 12
material = SubResource("Material_barrel")

[node name="OutdoorSection" type="Node3D" parent="."]

[node name="Ground" type="CSGBox3D" parent="OutdoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 50, -0.1, -12)
use_collision = true
size = Vector3(200, 0.2, 200)
material = SubResource("Material_ground")

[node name="NearBox1" type="CSGBox3D" parent="OutdoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 1, -9.002606)
use_collision = true
size = Vector3(2, 2, 2)
material = SubResource("Material_crate")

[node name="NearBox2" type="CSGBox3D" parent="OutdoorSection"]
transform = Transform3D(0.924, 0, 0.383, 0, 1, 0, -0.383, 0, 0.924, 25, 0.75, -9)
use_collision = true
size = Vector3(1.5, 1.5, 1.5)
material = SubResource("Material_barrel")

[node name="NearPole1" type="CSGCylinder3D" parent="OutdoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 24, 1.5, -14)
use_collision = true
radius = 0.15
height = 3.0
material = SubResource("Material_barrel")

[node name="MidBuilding1" type="CSGBox3D" parent="OutdoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 60, 4, -12)
use_collision = true
size = Vector3(8, 8, 10)
material = SubResource("Material_structure")

[node name="MidBuilding2" type="CSGBox3D" parent="OutdoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 55, 6, -30)
use_collision = true
size = Vector3(6, 12, 6)
material = SubResource("Material_structure")

[node name="FarTower1" type="CSGBox3D" parent="OutdoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 120, 10, -12)
use_collision = true
size = Vector3(10, 20, 10)
material = SubResource("Material_structure")

[node name="FarTower2" type="CSGBox3D" parent="OutdoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 7.5, 20)
use_collision = true
size = Vector3(15, 15, 8)
material = SubResource("Material_structure")

[node name="FarTower3" type="CSGBox3D" parent="OutdoorSection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 180, 15, -40)
use_collision = true
size = Vector3(12, 30, 12)
material = SubResource("Material_structure")

[node name="DebugOverlay" parent="." instance=ExtResource("5_debug")]

[node name="DemoLoopController" type="Node" parent="."]
script = ExtResource("6_demoloop")

[node name="DemoHUD" parent="." instance=ExtResource("7_demohud")]

[node name="DemoResultsScreen" parent="." instance=ExtResource("8_demoresults")]
